--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,22 @@ code {
   border: 2px solid #1565c0;
 }
 
+.screen {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-color: black;
+}
 
+.scan {
+  height: 15%;
+  width: 100%;
+  position: absolute;
+  z-index: 9999;
+  -moz-animation: scan 5s infinite;
+  -webkit-animation: scan 5s infinite;
+  animation: scan 3s infinite;
+  animation-direction: alternate-reverse;
+  box-shadow: 0px 0px 30px rgba(255, 204, 102, 0.8);
+  background-color: rgba(255, 255, 255, 0.5);
+}
